attachments fix and gap above page titles

--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,45 @@ pre {
 	z-index:1;
 }
 
+/* @group Attachments table */
+table.attachments caption {
+  display: none;
+}
+table.attachments {
+  border-color: #CCC;
+  border-width: 1px;
+  border-style: solid none none solid;
+  width: auto;
+}
+table.attachments thead { border: 1px solid #CCC }
+table.attachments td {
+  line-height: 24px; padding: 0;
+  border-right: 1px solid #CCC;
+  border-bottom: 1px solid #CCC;
+}
+table.attachments tr {
+  border-right: 1px solid #CCC;
+}
+table.attachments td a {
+	line-height: 24px;
+	padding: 0 26px;
+	background-position: 5px;
+	background-repeat: no-repeat;
+}
+table.attachments th {
+  background-color: #F2F2F2;
+  font-weight: normal;
+  font-family: Arial, Helvetica, "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif;
+  font-size: 77%;
+}
+table.attachments td.size {
+  padding: 0 5px;
+  font-family: Arial, Helvetica, "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif;
+  font-size: 77%;
+  color: #404040;
+  font-style: normal;
+}
+
 /* Slider -------------- */
 
 #slider{
@@ -1286,6 +1325,8 @@ ul.pager a:hover
 	font-size:11px;
 	color:#666;
 	margin:0 0 25px 0;
+	display:none;
+
 }
 
 .single .breadcrumb, .page .breadcrumb {
@@ -1370,9 +1411,8 @@ ul.pager a:hover
 
 /* Main Content -------------- */
 
-  /* 
-  		Section added to fix podcast page (copied from 1.x version)
-  */
+/* Section added to fix podcast page (copied from 1.x version) */
+
 .view th {
  text-align: center;
 }
@@ -1404,9 +1444,12 @@ ul.pager a:hover
 	vertical-align: middle;
 }
 
-  /* 
-  		END Podcast page section
-  */
+  /* fix for attachment -------------- */
+
+#content .file img{
+	display:none
+
+/* Main Content continued -------------- */
 
 .single #content, .page #content {
 	width: 610px;
